--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ Logs/shadercompiler-UnityShaderCompiler.exe2.log
 Logs/AssetImportWorker0.log
 Logs/AssetImportWorker1.log
 Logs/shadercompiler-AssetImportWorker0.log
+Logs/
