Sistema de dar puntos a los jugadores en el juego

--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,5 @@ UserSettings/Search.index
 .vs/TFG/FileContentIndex/63bcf1fe-520f-4cc5-aae2-269b3eda449d.vsidx
 .vs/TFG/FileContentIndex/b94c3811-b057-480e-9f78-057152623365.vsidx
 UserSettings/Layouts/CurrentMaximizeLayout.dwlt
+.vs/TFG/FileContentIndex/3ebdb1b3-3948-4ec9-915e-d3f4145a3ae3.vsidx
+.vs/TFG/FileContentIndex/d581334f-932b-45bb-8496-feed0e40f14e.vsidx
