Control de Final de partida saber quien gana quien pierde y todo eso :)

--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,4 @@ UserSettings/Search.index
 UserSettings/Layouts/CurrentMaximizeLayout.dwlt
 .vs/TFG/FileContentIndex/3ebdb1b3-3948-4ec9-915e-d3f4145a3ae3.vsidx
 .vs/TFG/FileContentIndex/d581334f-932b-45bb-8496-feed0e40f14e.vsidx
+*.vsidx
