--- a/.gitignore
+++ b/.gitignore
@@ -1278,3 +1278,4 @@ Assets/TextMesh Pro/Sprites/EmojiOne.json
 Assets/TextMesh Pro/Sprites/EmojiOne.json.meta
 Assets/TextMesh Pro/Sprites/EmojiOne.png
 Assets/TextMesh Pro/Sprites/EmojiOne.png.meta
+CatsBattles.sln
