--- a/.gitignore
+++ b/.gitignore
@@ -1279,3 +1279,9 @@ Assets/TextMesh Pro/Sprites/EmojiOne.json.meta
 Assets/TextMesh Pro/Sprites/EmojiOne.png
 Assets/TextMesh Pro/Sprites/EmojiOne.png.meta
 CatsBattles.sln
+Assets/Sonido/Mana-Mana-ABC-Kids.wav
+Assets/Sonido/Mana-Mana-ABC-Kids.wav.meta
+Assets/Photon/PhotonLibs/WebSocket/PhotonWebSocket.asmdef.meta
+Assets/Photon/PhotonLibs/WebSocket/PhotonWebSocket.asmdef
+.vs/Cats/v17/.suo
+Cats.sln
