--- a/.gitignore
+++ b/.gitignore
@@ -1279,3 +1279,256 @@ Assets/TextMesh Pro/Sprites/EmojiOne.json.meta
 Assets/TextMesh Pro/Sprites/EmojiOne.png
 Assets/TextMesh Pro/Sprites/EmojiOne.png.meta
 CatsBattles.sln
+.vs/CatsBattles/v17/.suo
+.vs/CatsBattles/v17/DocumentLayout.json
+Assets/Photon/PhotonLibs/WebSocket/PhotonWebSocket.asmdef
+Assets/Photon/PhotonLibs/WebSocket/PhotonWebSocket.asmdef.meta
+build/TFG.exe
+build/UnityCrashHandler64.exe
+build/UnityPlayer.dll
+build/WinPixEventRuntime.dll
+build/MonoBleedingEdge/EmbedRuntime/mono-2.0-bdwgc.dll
+build/MonoBleedingEdge/EmbedRuntime/MonoPosixHelper.dll
+build/MonoBleedingEdge/etc/mono/browscap.ini
+build/MonoBleedingEdge/etc/mono/config
+build/MonoBleedingEdge/etc/mono/2.0/DefaultWsdlHelpGenerator.aspx
+build/MonoBleedingEdge/etc/mono/2.0/machine.config
+build/MonoBleedingEdge/etc/mono/2.0/settings.map
+build/MonoBleedingEdge/etc/mono/2.0/web.config
+build/MonoBleedingEdge/etc/mono/2.0/Browsers/Compat.browser
+build/MonoBleedingEdge/etc/mono/4.0/DefaultWsdlHelpGenerator.aspx
+build/MonoBleedingEdge/etc/mono/4.0/machine.config
+build/MonoBleedingEdge/etc/mono/4.0/settings.map
+build/MonoBleedingEdge/etc/mono/4.0/web.config
+build/MonoBleedingEdge/etc/mono/4.0/Browsers/Compat.browser
+build/MonoBleedingEdge/etc/mono/4.5/DefaultWsdlHelpGenerator.aspx
+build/MonoBleedingEdge/etc/mono/4.5/machine.config
+build/MonoBleedingEdge/etc/mono/4.5/settings.map
+build/MonoBleedingEdge/etc/mono/4.5/web.config
+build/MonoBleedingEdge/etc/mono/4.5/Browsers/Compat.browser
+build/MonoBleedingEdge/etc/mono/mconfig/config.xml
+build/TFG_BurstDebugInformation_DoNotShip/Data/Plugins/x86_64/lib_burst_generated.txt
+build/TFG_Data/app.info
+build/TFG_Data/boot.config
+build/TFG_Data/globalgamemanagers
+build/TFG_Data/globalgamemanagers.assets
+build/TFG_Data/globalgamemanagers.assets.resS
+build/TFG_Data/level0
+build/TFG_Data/resources.assets
+build/TFG_Data/resources.assets.resS
+build/TFG_Data/RuntimeInitializeOnLoads.json
+build/TFG_Data/ScriptingAssemblies.json
+build/TFG_Data/sharedassets0.assets
+build/TFG_Data/sharedassets0.assets.resS
+build/TFG_Data/Managed/Assembly-CSharp.dll
+build/TFG_Data/Managed/Assembly-CSharp.pdb
+build/TFG_Data/Managed/Mono.Security.dll
+build/TFG_Data/Managed/mscorlib.dll
+build/TFG_Data/Managed/netstandard.dll
+build/TFG_Data/Managed/Photon3Unity3D.dll
+build/TFG_Data/Managed/Photon3Unity3D.pdb
+build/TFG_Data/Managed/PhotonChat.dll
+build/TFG_Data/Managed/PhotonChat.pdb
+build/TFG_Data/Managed/PhotonRealtime.dll
+build/TFG_Data/Managed/PhotonRealtime.pdb
+build/TFG_Data/Managed/PhotonUnityNetworking.Demos.dll
+build/TFG_Data/Managed/PhotonUnityNetworking.Demos.pdb
+build/TFG_Data/Managed/PhotonUnityNetworking.dll
+build/TFG_Data/Managed/PhotonUnityNetworking.pdb
+build/TFG_Data/Managed/PhotonUnityNetworking.Utilities.dll
+build/TFG_Data/Managed/PhotonUnityNetworking.Utilities.pdb
+build/TFG_Data/Managed/System.ComponentModel.Composition.dll
+build/TFG_Data/Managed/System.Configuration.dll
+build/TFG_Data/Managed/System.Core.dll
+build/TFG_Data/Managed/System.Data.DataSetExtensions.dll
+build/TFG_Data/Managed/System.Data.dll
+build/TFG_Data/Managed/System.dll
+build/TFG_Data/Managed/System.Drawing.dll
+build/TFG_Data/Managed/System.EnterpriseServices.dll
+build/TFG_Data/Managed/System.IO.Compression.dll
+build/TFG_Data/Managed/System.IO.Compression.FileSystem.dll
+build/TFG_Data/Managed/System.Net.Http.dll
+build/TFG_Data/Managed/System.Numerics.dll
+build/TFG_Data/Managed/System.Runtime.dll
+build/TFG_Data/Managed/System.Runtime.Serialization.dll
+build/TFG_Data/Managed/System.Security.dll
+build/TFG_Data/Managed/System.ServiceModel.Internals.dll
+build/TFG_Data/Managed/System.Transactions.dll
+build/TFG_Data/Managed/System.Xml.dll
+build/TFG_Data/Managed/System.Xml.Linq.dll
+build/TFG_Data/Managed/Unity.2D.Animation.Runtime.dll
+build/TFG_Data/Managed/Unity.2D.Animation.Runtime.pdb
+build/TFG_Data/Managed/Unity.2D.Common.Runtime.dll
+build/TFG_Data/Managed/Unity.2D.Common.Runtime.pdb
+build/TFG_Data/Managed/Unity.2D.IK.Runtime.dll
+build/TFG_Data/Managed/Unity.2D.IK.Runtime.pdb
+build/TFG_Data/Managed/Unity.2D.PixelPerfect.dll
+build/TFG_Data/Managed/Unity.2D.PixelPerfect.pdb
+build/TFG_Data/Managed/Unity.2D.SpriteShape.Runtime.dll
+build/TFG_Data/Managed/Unity.2D.SpriteShape.Runtime.pdb
+build/TFG_Data/Managed/Unity.2D.Tilemap.Extras.dll
+build/TFG_Data/Managed/Unity.2D.Tilemap.Extras.pdb
+build/TFG_Data/Managed/Unity.Burst.dll
+build/TFG_Data/Managed/Unity.Burst.pdb
+build/TFG_Data/Managed/Unity.Burst.Unsafe.dll
+build/TFG_Data/Managed/Unity.Collections.dll
+build/TFG_Data/Managed/Unity.Collections.LowLevel.ILSupport.dll
+build/TFG_Data/Managed/Unity.Collections.pdb
+build/TFG_Data/Managed/Unity.InternalAPIEngineBridge.001.dll
+build/TFG_Data/Managed/Unity.InternalAPIEngineBridge.001.pdb
+build/TFG_Data/Managed/Unity.Mathematics.dll
+build/TFG_Data/Managed/Unity.Mathematics.pdb
+build/TFG_Data/Managed/Unity.TextMeshPro.dll
+build/TFG_Data/Managed/Unity.TextMeshPro.pdb
+build/TFG_Data/Managed/Unity.Timeline.dll
+build/TFG_Data/Managed/Unity.Timeline.pdb
+build/TFG_Data/Managed/Unity.VisualScripting.Antlr3.Runtime.dll
+build/TFG_Data/Managed/Unity.VisualScripting.Core.dll
+build/TFG_Data/Managed/Unity.VisualScripting.Core.pdb
+build/TFG_Data/Managed/Unity.VisualScripting.Flow.dll
+build/TFG_Data/Managed/Unity.VisualScripting.Flow.pdb
+build/TFG_Data/Managed/Unity.VisualScripting.State.dll
+build/TFG_Data/Managed/Unity.VisualScripting.State.pdb
+build/TFG_Data/Managed/UnityEngine.AccessibilityModule.dll
+build/TFG_Data/Managed/UnityEngine.AccessibilityModule.pdb
+build/TFG_Data/Managed/UnityEngine.AIModule.dll
+build/TFG_Data/Managed/UnityEngine.AIModule.pdb
+build/TFG_Data/Managed/UnityEngine.AndroidJNIModule.dll
+build/TFG_Data/Managed/UnityEngine.AndroidJNIModule.pdb
+build/TFG_Data/Managed/UnityEngine.AnimationModule.dll
+build/TFG_Data/Managed/UnityEngine.AnimationModule.pdb
+build/TFG_Data/Managed/UnityEngine.ARModule.dll
+build/TFG_Data/Managed/UnityEngine.ARModule.pdb
+build/TFG_Data/Managed/UnityEngine.AssetBundleModule.dll
+build/TFG_Data/Managed/UnityEngine.AssetBundleModule.pdb
+build/TFG_Data/Managed/UnityEngine.AudioModule.dll
+build/TFG_Data/Managed/UnityEngine.AudioModule.pdb
+build/TFG_Data/Managed/UnityEngine.ClothModule.dll
+build/TFG_Data/Managed/UnityEngine.ClothModule.pdb
+build/TFG_Data/Managed/UnityEngine.ClusterInputModule.dll
+build/TFG_Data/Managed/UnityEngine.ClusterInputModule.pdb
+build/TFG_Data/Managed/UnityEngine.ClusterRendererModule.dll
+build/TFG_Data/Managed/UnityEngine.ClusterRendererModule.pdb
+build/TFG_Data/Managed/UnityEngine.ContentLoadModule.dll
+build/TFG_Data/Managed/UnityEngine.ContentLoadModule.pdb
+build/TFG_Data/Managed/UnityEngine.CoreModule.dll
+build/TFG_Data/Managed/UnityEngine.CoreModule.pdb
+build/TFG_Data/Managed/UnityEngine.CrashReportingModule.dll
+build/TFG_Data/Managed/UnityEngine.CrashReportingModule.pdb
+build/TFG_Data/Managed/UnityEngine.DirectorModule.dll
+build/TFG_Data/Managed/UnityEngine.DirectorModule.pdb
+build/TFG_Data/Managed/UnityEngine.dll
+build/TFG_Data/Managed/UnityEngine.DSPGraphModule.dll
+build/TFG_Data/Managed/UnityEngine.DSPGraphModule.pdb
+build/TFG_Data/Managed/UnityEngine.GameCenterModule.dll
+build/TFG_Data/Managed/UnityEngine.GameCenterModule.pdb
+build/TFG_Data/Managed/UnityEngine.GIModule.dll
+build/TFG_Data/Managed/UnityEngine.GIModule.pdb
+build/TFG_Data/Managed/UnityEngine.GridModule.dll
+build/TFG_Data/Managed/UnityEngine.GridModule.pdb
+build/TFG_Data/Managed/UnityEngine.HotReloadModule.dll
+build/TFG_Data/Managed/UnityEngine.HotReloadModule.pdb
+build/TFG_Data/Managed/UnityEngine.ImageConversionModule.dll
+build/TFG_Data/Managed/UnityEngine.ImageConversionModule.pdb
+build/TFG_Data/Managed/UnityEngine.IMGUIModule.dll
+build/TFG_Data/Managed/UnityEngine.IMGUIModule.pdb
+build/TFG_Data/Managed/UnityEngine.InputLegacyModule.dll
+build/TFG_Data/Managed/UnityEngine.InputLegacyModule.pdb
+build/TFG_Data/Managed/UnityEngine.InputModule.dll
+build/TFG_Data/Managed/UnityEngine.InputModule.pdb
+build/TFG_Data/Managed/UnityEngine.JSONSerializeModule.dll
+build/TFG_Data/Managed/UnityEngine.JSONSerializeModule.pdb
+build/TFG_Data/Managed/UnityEngine.LocalizationModule.dll
+build/TFG_Data/Managed/UnityEngine.LocalizationModule.pdb
+build/TFG_Data/Managed/UnityEngine.NVIDIAModule.dll
+build/TFG_Data/Managed/UnityEngine.NVIDIAModule.pdb
+build/TFG_Data/Managed/UnityEngine.ParticleSystemModule.dll
+build/TFG_Data/Managed/UnityEngine.ParticleSystemModule.pdb
+build/TFG_Data/Managed/UnityEngine.pdb
+build/TFG_Data/Managed/UnityEngine.PerformanceReportingModule.dll
+build/TFG_Data/Managed/UnityEngine.PerformanceReportingModule.pdb
+build/TFG_Data/Managed/UnityEngine.Physics2DModule.dll
+build/TFG_Data/Managed/UnityEngine.Physics2DModule.pdb
+build/TFG_Data/Managed/UnityEngine.PhysicsModule.dll
+build/TFG_Data/Managed/UnityEngine.PhysicsModule.pdb
+build/TFG_Data/Managed/UnityEngine.ProfilerModule.dll
+build/TFG_Data/Managed/UnityEngine.ProfilerModule.pdb
+build/TFG_Data/Managed/UnityEngine.PropertiesModule.dll
+build/TFG_Data/Managed/UnityEngine.PropertiesModule.pdb
+build/TFG_Data/Managed/UnityEngine.RuntimeInitializeOnLoadManagerInitializerModule.dll
+build/TFG_Data/Managed/UnityEngine.RuntimeInitializeOnLoadManagerInitializerModule.pdb
+build/TFG_Data/Managed/UnityEngine.ScreenCaptureModule.dll
+build/TFG_Data/Managed/UnityEngine.ScreenCaptureModule.pdb
+build/TFG_Data/Managed/UnityEngine.SharedInternalsModule.dll
+build/TFG_Data/Managed/UnityEngine.SharedInternalsModule.pdb
+build/TFG_Data/Managed/UnityEngine.SpriteMaskModule.dll
+build/TFG_Data/Managed/UnityEngine.SpriteMaskModule.pdb
+build/TFG_Data/Managed/UnityEngine.SpriteShapeModule.dll
+build/TFG_Data/Managed/UnityEngine.SpriteShapeModule.pdb
+build/TFG_Data/Managed/UnityEngine.StreamingModule.dll
+build/TFG_Data/Managed/UnityEngine.StreamingModule.pdb
+build/TFG_Data/Managed/UnityEngine.SubstanceModule.dll
+build/TFG_Data/Managed/UnityEngine.SubstanceModule.pdb
+build/TFG_Data/Managed/UnityEngine.SubsystemsModule.dll
+build/TFG_Data/Managed/UnityEngine.SubsystemsModule.pdb
+build/TFG_Data/Managed/UnityEngine.TerrainModule.dll
+build/TFG_Data/Managed/UnityEngine.TerrainModule.pdb
+build/TFG_Data/Managed/UnityEngine.TerrainPhysicsModule.dll
+build/TFG_Data/Managed/UnityEngine.TerrainPhysicsModule.pdb
+build/TFG_Data/Managed/UnityEngine.TextCoreFontEngineModule.dll
+build/TFG_Data/Managed/UnityEngine.TextCoreFontEngineModule.pdb
+build/TFG_Data/Managed/UnityEngine.TextCoreTextEngineModule.dll
+build/TFG_Data/Managed/UnityEngine.TextCoreTextEngineModule.pdb
+build/TFG_Data/Managed/UnityEngine.TextRenderingModule.dll
+build/TFG_Data/Managed/UnityEngine.TextRenderingModule.pdb
+build/TFG_Data/Managed/UnityEngine.TilemapModule.dll
+build/TFG_Data/Managed/UnityEngine.TilemapModule.pdb
+build/TFG_Data/Managed/UnityEngine.TLSModule.dll
+build/TFG_Data/Managed/UnityEngine.TLSModule.pdb
+build/TFG_Data/Managed/UnityEngine.UI.dll
+build/TFG_Data/Managed/UnityEngine.UI.pdb
+build/TFG_Data/Managed/UnityEngine.UIElementsModule.dll
+build/TFG_Data/Managed/UnityEngine.UIElementsModule.pdb
+build/TFG_Data/Managed/UnityEngine.UIModule.dll
+build/TFG_Data/Managed/UnityEngine.UIModule.pdb
+build/TFG_Data/Managed/UnityEngine.UmbraModule.dll
+build/TFG_Data/Managed/UnityEngine.UmbraModule.pdb
+build/TFG_Data/Managed/UnityEngine.UnityAnalyticsCommonModule.dll
+build/TFG_Data/Managed/UnityEngine.UnityAnalyticsCommonModule.pdb
+build/TFG_Data/Managed/UnityEngine.UnityAnalyticsModule.dll
+build/TFG_Data/Managed/UnityEngine.UnityAnalyticsModule.pdb
+build/TFG_Data/Managed/UnityEngine.UnityConnectModule.dll
+build/TFG_Data/Managed/UnityEngine.UnityConnectModule.pdb
+build/TFG_Data/Managed/UnityEngine.UnityCurlModule.dll
+build/TFG_Data/Managed/UnityEngine.UnityCurlModule.pdb
+build/TFG_Data/Managed/UnityEngine.UnityTestProtocolModule.dll
+build/TFG_Data/Managed/UnityEngine.UnityTestProtocolModule.pdb
+build/TFG_Data/Managed/UnityEngine.UnityWebRequestAssetBundleModule.dll
+build/TFG_Data/Managed/UnityEngine.UnityWebRequestAssetBundleModule.pdb
+build/TFG_Data/Managed/UnityEngine.UnityWebRequestAudioModule.dll
+build/TFG_Data/Managed/UnityEngine.UnityWebRequestAudioModule.pdb
+build/TFG_Data/Managed/UnityEngine.UnityWebRequestModule.dll
+build/TFG_Data/Managed/UnityEngine.UnityWebRequestModule.pdb
+build/TFG_Data/Managed/UnityEngine.UnityWebRequestTextureModule.dll
+build/TFG_Data/Managed/UnityEngine.UnityWebRequestTextureModule.pdb
+build/TFG_Data/Managed/UnityEngine.UnityWebRequestWWWModule.dll
+build/TFG_Data/Managed/UnityEngine.UnityWebRequestWWWModule.pdb
+build/TFG_Data/Managed/UnityEngine.VehiclesModule.dll
+build/TFG_Data/Managed/UnityEngine.VehiclesModule.pdb
+build/TFG_Data/Managed/UnityEngine.VFXModule.dll
+build/TFG_Data/Managed/UnityEngine.VFXModule.pdb
+build/TFG_Data/Managed/UnityEngine.VideoModule.dll
+build/TFG_Data/Managed/UnityEngine.VideoModule.pdb
+build/TFG_Data/Managed/UnityEngine.VirtualTexturingModule.dll
+build/TFG_Data/Managed/UnityEngine.VirtualTexturingModule.pdb
+build/TFG_Data/Managed/UnityEngine.VRModule.dll
+build/TFG_Data/Managed/UnityEngine.VRModule.pdb
+build/TFG_Data/Managed/UnityEngine.WindModule.dll
+build/TFG_Data/Managed/UnityEngine.WindModule.pdb
+build/TFG_Data/Managed/UnityEngine.XRModule.dll
+build/TFG_Data/Managed/UnityEngine.XRModule.pdb
+build/TFG_Data/Managed/websocket-sharp.dll
+build/TFG_Data/Plugins/x86_64/lib_burst_generated.dll
+build/TFG_Data/Plugins/x86_64/lib_burst_generated.pdb
+build/TFG_Data/Resources/unity default resources
+build/TFG_Data/Resources/unity_builtin_extra
