--- a/.gitignore
+++ b/.gitignore
@@ -1536,3 +1536,6 @@ Clientepc/TFG_Data/Resources/unity default resources
 Clientepc/TFG_Data/Resources/unity_builtin_extra
 UserSettings/EditorUserSettings.asset
 UserSettings/Layouts/default-2022.dwlt
+Clientepc/TFG_Data/level1
+Clientepc/TFG_Data/sharedassets1.assets
+Clientepc/TFG_Data/sharedassets1.assets.resS
