--- a/.gitignore
+++ b/.gitignore
@@ -1776,3 +1776,5 @@ Clientepc/TFG_Data/Managed/UnityEngine.VirtualTexturingModule.pdb
 Clientepc/TFG_Data/Managed/UnityEngine.VRModule.dll
 Clientepc/TFG_Data/Managed/UnityEngine.VRModule.pdb
 Clientepc/
+Cats.sln
+.vs/Cats/v17/.suo
