--- a/.gitignore
+++ b/.gitignore
@@ -1778,3 +1778,5 @@ Clientepc/TFG_Data/Managed/UnityEngine.VRModule.pdb
 Clientepc/
 Cats.sln
 .vs/Cats/v17/.suo
+Assets/Sonido/Mana-Mana-ABC-Kids.wav
+Assets/Sonido/Mana-Mana-ABC-Kids.wav.meta
